Broadcast and handling functionality in place
So the framework for broadcasting and handling messages is in place.
Steps:
1. Call sendToGroup(theCommand, theData)
//theCommand is just a string
//theData can be any object you want
2. To handle a message, just go to the bottom of the page where there's
commented out code and work off of that. (<YOUR COMMAND> would be the
"theCommand" passed into "sendToGroup" function in step 1

Additional stuff:
peer names and chatMessaging is now present

--- a/public/client.html
+++ b/public/client.html
@@ -126,6 +126,13 @@
 		</div>
 		<!-- Chat Room Page -->
 		<div id="chat-room">
+		
+			<div id="convo-div">
+				<textarea id="convo" readonly></textarea>
+				<input type="text" class="input" placeholder="Your message" id="msg">
+				<input type="button" name="send" id="send" value="Send" class="btn btn-success">
+			</div>
+			
 			<div id="canvas-div" class="container-fluid no-padding gray">
 				<canvas id="sketchpad" class="white" width="800" height="600">
 					Your browser does not seem to support the canvas element. Please get a better browser.
