--- a/public/client.html
+++ b/public/client.html
@@ -13,28 +13,15 @@
 		<script type="text/javascript" src="/linkedlist.js"></script>
 	</head>
 	<body>
-		<nav class="navbar navbar-static-top navbar-inverse green" role="navigation">
+		<nav id="navigation" class="navbar navbar-static-top navbar-inverse green" role="navigation">
 			<div class="container">
-				<div class="navbar-header">
-					<button aria-controls="navbar" aria-expanded="false" data-target="#navbar" data-toggle="collapse" class="navbar-toggle collapsed" type="button">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
+				<a class="navbar-brand" href="./">
+					<h4><i class="fa fa-pencil fa-1x"></i><strong>Drawi</strong></h4>
+				</a>
+				<div id="navbar" class="pull-right">
+					<button type="button" class="btn btn-default btn-lg navbar-btn btn-custom dark-green">
+						<i class="fa fa-lock fa-1x"> </i>Lock Room
 					</button>
-					<a class="navbar-brand" href="./">
-						<h4><i class="fa fa-pencil fa-1x"></i><strong>Drawi</strong></h4>
-					</a>
-				</div>
-				<div id="navbar" class="navbar-collapse collapse" aria-expanded="false">
-					<ul class="nav navbar-nav">
-					
-					</ul>
-					<ul class="nav navbar-nav navbar-right">
-						<button type="button" class="btn btn-default btn-lg navbar-btn btn-custom dark-green">
-							<i class="fa fa-lock fa-1x"> </i>Lock Room
-						</button>
-					</ul>
 				</div>
 			</div>
 		</nav>
@@ -126,17 +113,26 @@
 		</div>
 		<!-- Chat Room Page -->
 		<div id="chat-room">
-		
-			<div id="convo-div">
-				<textarea id="convo" readonly></textarea>
-				<input type="text" class="input" placeholder="Your message" id="msg">
-				<input type="button" name="send" id="send" value="Send" class="btn btn-success">
-			</div>
-			
 			<div id="canvas-div" class="container-fluid no-padding gray">
-				<canvas id="sketchpad" class="white" width="800" height="600">
+				<canvas id="sketchpad" class="white" width="100" height="100">
 					Your browser does not seem to support the canvas element. Please get a better browser.
 				</canvas>
+			</div>
+			<div class="col-xs-4 col-xs-offset-7 convo-div navbar navbar-fixed-bottom">
+				<div class="convo-header green">
+					Chat 
+					<button aria-expanded="false" data-target="#chat1" data-toggle="collapse" class="btn btn-default btn-custom dark-green" type="button">
+						<i class="fa fa-chevron-up fa-1x"></i>
+					</button>
+					<input type=color pattern="#[a-f0-9]{6}" title="hexadecimal color" placeholder="#000000">
+				</div>
+				<div id="chat1" class="convo-container white collapse">
+					<textarea id="convo" readonly></textarea>
+					<div class="convo-footer gray">
+						<input type="text" class="input" placeholder="Your message" id="msg">
+						<input type="button" name="send" id="send" value="Send" class="btn btn-success">
+					</div>
+				</div>
 			</div>
 		</div>
 		<!-- Enter Name Page -->
