--- a/public/client.html
+++ b/public/client.html
@@ -19,6 +19,8 @@
 					<h4><i class="fa fa-pencil fa-1x"></i><strong>Drawi</strong></h4>
 				</a>
 				<div id="navbar" class="pull-right">
+					<input id="size-selector" type="range" id="myRange" value="5">
+					<input id="color-selector" class="btn btn-default btn-lg navbar-btn btn-custom dark-green" type="color" pattern="#[a-f0-9]{6}" title="hexadecimal color" placeholder="#000000">
 					<button type="button" class="btn btn-default btn-lg navbar-btn btn-custom dark-green">
 						<i class="fa fa-lock fa-1x"> </i>Lock Room
 					</button>
@@ -114,19 +116,16 @@
 		<!-- Chat Room Page -->
 		<div id="chat-room">
 			<div id="canvas-div" class="container-fluid no-padding gray">
-				<canvas id="sketchpad" class="white" width="100" height="100">
+				<canvas id="canvas" class="white" width="800" height="500">
 					Your browser does not seem to support the canvas element. Please get a better browser.
 				</canvas>
 			</div>
-			<div class="col-xs-4 col-xs-offset-7 convo-div navbar navbar-fixed-bottom">
-				<div class="convo-header green">
+			<div class="col-xs-7 col-xs-offset-4 col-md-5 col-md-offset-6 col-lg-3 col-lg-offset-8 convo-div navbar navbar-fixed-bottom">
+				<div class="convo-header green" aria-expanded="false" data-target="#chat" data-toggle="collapse">
 					Chat 
-					<button aria-expanded="false" data-target="#chat1" data-toggle="collapse" class="btn btn-default btn-custom dark-green" type="button">
-						<i class="fa fa-chevron-up fa-1x"></i>
-					</button>
-					<input type=color pattern="#[a-f0-9]{6}" title="hexadecimal color" placeholder="#000000">
+					<i class="fa fa-chevron-up fa-1x"></i>
 				</div>
-				<div id="chat1" class="convo-container white collapse">
+				<div id="chat" class="convo-container white collapse">
 					<textarea id="convo" readonly></textarea>
 					<div class="convo-footer gray">
 						<input type="text" class="input" placeholder="Your message" id="msg">
