Canvas data now gets sent :D

--- a/public/client.html
+++ b/public/client.html
@@ -5,12 +5,6 @@
 		<link rel="stylesheet" type="text/css" href="/bootstrap.min.css"/>
 		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="/style.css"/>
-		<script src="/socket.io/socket.io.js"></script>
-		<script type="text/javascript" src="/jquery-1.11.1.js"></script>
-		<script type="text/javascript" src="/bootstrap.min.js"></script>
-		<script type="text/javascript" src="/client.js"></script>
-		<script type="text/javascript" src="/sketchpad.js"></script>
-		<script type="text/javascript" src="/linkedlist.js"></script>
 	</head>
 	<body>
 		<nav id="navigation" class="navbar navbar-static-top navbar-inverse green" role="navigation">
@@ -117,7 +111,7 @@
 		<div id="chat-room">
 			<div id="canvas-div" class="container-fluid no-padding gray">
 				<canvas id="canvas" class="white" width="800" height="500">
-					Your browser does not seem to support the canvas element. Please get a better browser.
+					Your browser does not seem to support the canvas element.
 				</canvas>
 			</div>
 			<div class="col-xs-7 col-xs-offset-4 col-md-5 col-md-offset-6 col-lg-3 col-lg-offset-8 convo-div navbar navbar-fixed-bottom">
@@ -146,4 +140,10 @@
 			</div>
 		</div>
 	</body>
+	<script src="/socket.io/socket.io.js"></script>
+	<script type="text/javascript" src="/jquery-1.11.1.js"></script>
+	<script type="text/javascript" src="/bootstrap.min.js"></script>
+	<script type="text/javascript" src="/client.js"></script>
+	<script type="text/javascript" src="/sketchpad.js"></script>
+	<script type="text/javascript" src="/linkedlist.js"></script>
 </html>
