Commented out the lock button. Added proper redirecting when room does not exist.

--- a/public/client.html
+++ b/public/client.html
@@ -15,9 +15,9 @@
 				<div id="navbar" class="pull-right">
 					<input id="size-selector" type="range" id="myRange" value="5">
 					<input id="color-selector" class="btn btn-default btn-lg navbar-btn btn-custom dark-green" type="color" pattern="#[a-f0-9]{6}" title="hexadecimal color" placeholder="#000000">
-					<button type="button" class="btn btn-default btn-lg navbar-btn btn-custom dark-green">
+					<!--button type="button" class="btn btn-default btn-lg navbar-btn btn-custom dark-green">
 						<i class="fa fa-lock fa-1x"> </i>Lock Room
-					</button>
+					</button-->
 				</div>
 			</div>
 		</nav>
