added notification for new message. added left message.

--- a/public/client.html
+++ b/public/client.html
@@ -73,25 +73,29 @@
 					</div>
 				</div>
 			</div>
+			<br/>
+			<br/>
 			<div>
-				<br/>
-				<br/>
-				<br/>
-				<br/>
-				<br/>
-				<br/>
-				<br/>
-				<br/>
-				<br/>
-				<br/>
-				<br/>
-				<br/>
-				<br/>
-				<br/>
-				<br/>
-				<br/>
-				<br/>
+				<div class="home-circle green">
+					<i class="fa fa-copy"></i>
+				</div>
 			</div>
+			<div>
+				<div class="home-circle green">
+					<i class="fa fa-copy"></i>
+				</div>
+			</div>
+			<div>
+				<div class="home-circle green">
+					<i class="fa fa-copy"></i>
+				</div>
+			</div>
+			<br/>
+			<br/>
+			<br/>
+			<br/>
+			<br/>
+			<br/>
 		</div>
 		<!-- Enter Name Page -->
 		<div id="name-form">
